syntax = "proto3";

package chat;

message Chat {
  enum Status {
    CREATED = 0;
    DELETED = 1;
  }
  enum Type {
    CHAT = 0;
    ROLE = 1;
  }
  string id = 1;
  string userId = 2;
  Status status = 3;
  string name = 4;
  Type type = 5;
  int64 createTime = 6;
  int64 updateTime = 7;
}

message ChatSetting {
  string chatId = 1;
  // 如果是普通的CHAT则是空字符串
  // 如果是ROLE则用于chatgpt api 中的 system role
  string describe = 2;
  int64 createTime = 3;
  int64 updateTime = 4;
}

message ChatMessage {
  string id = 1;
  string chatId = 2;
  int64 createTime = 3;
  int64 updateTime = 4;
}
